Creacion de pagina Quienes Somos y ajustes de diseño y animaciones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,11 +40,14 @@
               <li>
                 <a class="nav-link" href="donde-encontrarnos.html">Donde encontrarnos</a>
               </li>
+              <li>
+                <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-              <button class="btn btn-dark btn-dark-outline-success" type="submit"><i class="bi bi-search"></i></button>
-              <button class="btn btn-dark btn-dark-outline-success" type="input"> <i class="bi bi-cart"></i></button>
+              <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
+              <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
             </form>
           </div>
         </div>
@@ -79,7 +82,7 @@
       </label>
     </div>
   </div>
-  <button type="submit" class="btn btn-dark">Enviar</button>
+  <button type="submit" class="btn btn-dark btn-style">Enviar</button>
 </div>
 </form>
 </main>
@@ -92,16 +95,16 @@
 
         
  
-<footer class="pt-5 pb-4">
+<footer class="pt-5 pb-4 bg-footer">
   <div class="container-fluid text-center">
     <div class="row text-center">
       <div class="footer-text pb-3">            
         <h5>Seguinos en nuestras redes!</h5>
       </div>
       <div class="m-auto col-xs-12">
-        <a href="https://www.instagram.com/" class="btn btn-dark"><i class="bi bi-instagram"></i></a>
-        <a href="https://es-la.facebook.com/" class="btn btn-dark"><i class="bi bi-facebook"></i></a>
-        <a href="https://twitter.com/?lang=es" class="btn btn-dark"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.instagram.com/" class="btn btn-dark btn-style"><i class="bi bi-instagram"></i></a>
+        <a href="https://es-la.facebook.com/" class="btn btn-dark btn-style"><i class="bi bi-facebook"></i></a>
+        <a href="https://twitter.com/?lang=es" class="btn btn-dark btn-style"><i class="bi bi-twitter"></i></a>
       </div>
     </div>
   </div>
