--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <title>3D SOUND</title>
 </head>
-<body>
+<body class="bg-body">
   <nav class="navbar navbar-expand-lg navbar-dark bg-nav nav-underline p-3 sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img id="nav-img" class="rounded-circle" src="images/favicon.png" alt="favicon">
@@ -40,6 +40,9 @@
           </li>
           <li>
             <a class="nav-link" href="pages/donde-encontrarnos.html">Donde encontrarnos</a>
+          </li>
+          <li>
+            <a class="nav-link" href="pages/quienes-somos.html">Quienes somos</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -78,37 +81,38 @@
 </aside>
 
 <article class="container-fluid pt-5" id="article-container"> 
-    <div class="row m-auto container-fluid">
-      <div class="col-lg-4 col-sm-12 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+
+    <div class="row mt-5 container-fluid mb-5 mx-auto">
+      <div class="col-lg-4 col-sm-12 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="1500">
         <h1>Mejora tu set-up</h1>
         <p class="placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
       </div>
-      <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width" data-aos="fade-left" data-aos-delay="200">
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width" data-aos="fade-left" data-aos-delay="200" data-aos-duration="1500">
           <img src="images/images 10.jpg" class="card-img-home" alt="article-img-1">
         <div class="card-body pt-5 pb-0">
             <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
         </div>
     </div>
 
-    <div class="container-fluid pt-5 row m-auto">
-      <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width card-position" data-aos="fade-right" data-aos-delay="200">
+    <div class="container-fluid pt-5 row mt-5 mb-5 mx-auto">
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width card-position" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1500">
           <img src="images/images 11.jpg" class="card-img-home" alt="article-img-2">
         <div class="card-body pt-5 pb-0">
             <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-12 text-home-relative card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+      <div class="col-lg-4 col-sm-12 text-home-relative card-aside m-auto" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="1500">
         <h2>Prueba la nueva tecnología </h2>
-        <p class="placeholder-wave">Descubre nuevos mundos.</p>
+        <p class="placeholder-wave text-end">Descubre nuevos mundos.</p>
       </div>
     </div>
 
-  <div class="container-fluid pt-5 row m-auto">
-    <div class="col-lg-4 col-sm-12 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+  <div class="container-fluid pt-5 row mt-5 mb-5 mx-auto">
+    <div class="col-lg-4 col-sm-12 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="1500">
       <h3>Comodidad a la hora de trabajar</h3>
-      <p class="placeholder-wave">Tu nueva zona de comfort.</p>
+      <p class="placeholder-wave ">Tu nueva zona de comfort.</p>
     </div>
-    <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width" data-aos="fade-left" data-aos-delay="200">
+    <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width" data-aos="fade-left" data-aos-delay="200" data-aos-duration="1500">
           <img src="images/images 12.jpg" class="card-img-home" alt="article-img-3">
         <div class="card-body pt-5 pb-0">
           <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
