--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Da el máximo de vos con el mejor equipo para juegos, trabajo, u ocio que pueda existir, aquí en 3D SOUND vas a encontrar desde nuestra especialidad en auriculares y sonido hasta teclados de la mejor calidad existente en el mercado de periféricos, todos estos a un precio accesible, ya que, en 3D SOUNDS tenemos los precios más bajos del mercado, contamos con un contacto especializado para resolver dudas y consultas de nuestros clientes que confíen en nosotros y en nuestra calidad tanto de productos, como nuestra calidad humana. También comentar que estan habilitados todos los medios de pago, podes abonar por transferecia, tarjeta de débito o crédito, o podes en efectivo acercandote al local ubicado en el barrio de Caballito, Ciudad Autónoma de Buenos Aires, entre las calles Jeronimo Salguero y Av.Medrano y así también podremos brindar una atención especializada para poder conseguir lo que usted necesita.">
-    <meta name="keywords" content="">
+    <meta name="description" content="Acercate al local ubicado en el barrio de Caballito, Ciudad Autónoma de Buenos Aires, entre las calles Jeronimo Salguero y Av.Medrano y así también podremos brindar una atención especializada para poder conseguir lo que usted necesita. Nos dedicamos a brindar experiencias personalizadas para que puedas conseguir el producto especial que nosotros podemos ofrecerte y que vos queres para tu set-up, estudio o trabajo.">
+    <meta name="keywords" content="Audio, Auriculares, Teclados, Tecnología, Set-up, Gaming, Periféricos, Venta, Componentes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
