--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Da el máximo de vos con el mejor equipo para juegos, trabajo, u ocio que pueda existir, aquí en 3D SOUND vas a encontrar desde nuestra especialidad en auriculares y sonido hasta teclados de la mejor calidad existente en el mercado de periféricos, todos estos a un precio accesible, ya que, en 3D SOUNDS tenemos los precios más bajos del mercado, contamos con un contacto especializado para resolver dudas y consultas de nuestros clientes que confíen en nosotros y en nuestra calidad tanto de productos, como nuestra calidad humana. También comentar que estan habilitados todos los medios de pago, podes abonar por transferecia, tarjeta de débito o crédito, o podes en efectivo acercandote al local ubicado en el barrio de Caballito, Ciudad Autónoma de Buenos Aires, entre las calles Jeronimo Salguero y Av.Medrano y así también podremos brindar una atención especializada para poder conseguir lo que usted necesita.">
+    <meta name="description" content="Un emprendimiento enfocado en la venta de productos de calidad para las personas que confien en nosotros, 3D Sounds vende productos y experiencias que tienen un lugar cotidiano en la vida de las personas. Durante más de 10 años, hemos sabido ser la tienda de confianza de periféricos en el barrio y ahora buscamos ampliarnos a otros públicos. Nuestros productos se centran en cómo los clientes se conectan e interactúan con el mundo digital.">
     <meta name="keywords" content="Audio, Auriculares, Teclados, Tecnología, Set-up, Gaming, Periféricos, Venta, Componentes">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -52,24 +52,23 @@
         </div>
       </nav>
       <main class="quienes-somos-flex">
-        <img src="../images/quienesomos.jpg" alt="banner-quienes-somos" class="w-100 img-quienes-somos rounded">
-        <h1 class="mt-5 ms-5 text-center">Somos 3D Sound</h1>
+        <img src="../images/quienesomos.jpg" alt="banner-quienes-somos" class="w-100 img-quienes-somos">
+        <h1 class="text-center">Somos 3D Sound</h1>
 
-      <div class="row d-flex justify-content-center margin-text-quienes-somos-1 mb-5">
-
-        <div class="mt-5 col-lg-2 text-quienes-somos-1 mb-5 text-start fs-5" data-aos="fade-up" data-aos-duration="2000">
+      <div class="container-fluid d-flex justify-content-center margin-text-quienes-somos-1">
+        <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 text-quienes-somos-1" data-aos="fade-up" data-aos-duration="2000">
             <p>Un emprendimiento enfocado en la venta de productos de calidad para las personas que confien en nosotros, 3D Sounds vende productos y experiencias que tienen un lugar cotidiano en la vida de las personas.</p>
         </div>
-        <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="zoom-out-left" data-aos-duration="2000">
-          <img src="../images/quienes somos 1.jpg" alt="perifericos-quienes-somos-1" class="w-100 rounded img-body-quienes-somos">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 d-flex align-items-center justify-content-center" data-aos="zoom-out-left" data-aos-duration="2000">
+          <img src="../images/quienes somos 1.jpg" alt="perifericos-quienes-somos-1" class="rounded img-body-quienes-somos">
         </div>
       </div>
 
-      <div class="row d-flex justify-content-center margin-text-quienes-somos-2">
-        <div class="col-lg-4 d-flex align-items-center justify-content-center me-5" data-aos="zoom-out-right" data-aos-duration="2000">
-          <img src="../images/quienes somos 2.jpg" alt="perifericos-quienes-somos-2" class="w-100 rounded img-body-quienes-somos">
+      <div class="container-fluid d-flex justify-content-center margin-text-quienes-somos-2">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 d-flex align-items-center justify-content-center" data-aos="zoom-out-right" data-aos-duration="2000">
+          <img src="../images/quienes somos 2.jpg" alt="perifericos-quienes-somos-2" class="rounded img-body-quienes-somos">
         </div>
-        <div class="mt-5 col-lg-2 text-quienes-somos-2 mb-5 text-end fs-5" data-aos="fade-up" data-aos-duration="2000">
+        <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 text-quienes-somos-2" data-aos="fade-up" data-aos-duration="2000">
             <p>Durante más de 10 años, hemos sabido ser la tienda de confianza de periféricos en el barrio y ahora buscamos ampliarnos a otros públicos. Nuestros productos se centran en cómo los clientes se conectan e interactúan con el mundo digital.</p>
         </div>
 
