--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,102 +15,95 @@
     <title>Contacto</title>
 </head>
 
+
 <body class="bg-body">
 
-    <nav  class="navbar navbar-expand-lg navbar-dark bg-nav-form nav-underline p-3 sticky-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul  class="navbar-nav mx-auto justify-content-between mb-2 mb-lg-0" id="navbar">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item text-dark" href="productos.html">Auriculares</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item text-dark" href="productos.html">Teclados</a></li>
-                </ul>
-              </li>
-              <li>
-                <a class="nav-link" href="#">Contacto</a>
-              </li>
-              <li>
-                <a class="nav-link" href="donde-encontrarnos.html">Donde encontrarnos</a>
-              </li>
-              <li>
-                <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-              <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
-              <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
-            </form>
-          </div>
+
+  <nav  class="navbar navbar-expand-lg navbar-dark bg-nav-form nav-underline p-3 sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul  class="navbar-nav mx-auto justify-content-between mb-2 mb-lg-0" id="navbar">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item text-dark" href="productos.html">Auriculares</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item text-dark" href="productos.html">Teclados</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
+            <li>
+              <a class="nav-link" href="donde-encontrarnos.html">Donde encontrarnos</a>
+            </li>
+            <li>
+              <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
+            <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
+          </form>
         </div>
-      </nav>
+      </div>
+    </nav>
     
 
-<main class="main-form">
+  <main class="main-form">
+    <h1>Contacto</h1>
+    <p>En caso de consultas, complete el formulario debajo para nosotros poder atenderlo!</p>
 
-<h1>Contacto</h1>
-<p>En caso de consultas, complete el formulario debajo para nosotros poder atenderlo!</p>
+    <form action="contacto.html" enctype="application/x-www-form-urlencoded" method="post" class="col-lg-5 col-sm-12 col-xs-12 flex-form mx-auto">
+      <div class="hover-form col-sm-12 col-xs-12 rounded">
+        <div class="mb-3 label-w">
+          <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+          <input class="form-control" type="text" aria-label="default input example">
+        </div>
 
-<form action="contacto.html" enctype="application/x-www-form-urlencoded" method="post" class="col-lg-5 col-sm-12 col-xs-12 flex-form mx-auto">
-  <div class="hover-form col-sm-12 col-xs-12 rounded">
-    <div class="mb-3 label-w">
-      <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-      <input class="form-control" type="text" aria-label="default input example">
-    </div>
-  <div class="mb-3 label-w">
-    <label for="exampleFormControlInput1" class="form-label">Email</label>
-    <input type="email" class="form-control " id="exampleFormControlInput1" placeholder="nombre@email.com">
-  </div>
-  <div class="mb-3 label-w">
-    <label for="exampleFormControlTextarea1" class="form-label">Escriba aqui su consulta!</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
+        <div class="mb-3 label-w">
+          <label for="exampleFormControlInput1" class="form-label">Email</label>
+          <input type="email" class="form-control " id="exampleFormControlInput1" placeholder="nombre@email.com">
+        </div>
 
-  <div class="check-btn-flex pb-3">
-    <div class="form-check mx-auto">
-      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-      Acepta los términos y condiciones
-      </label>
-    </div>
-  </div>
-  <button type="submit" class="btn btn-dark btn-style">Enviar</button>
-</div>
-</form>
-</main>
+        <div class="mb-3 label-w">
+          <label for="exampleFormControlTextarea1" class="form-label">Escriba aqui su consulta!</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
 
+        <div class="check-btn-flex pb-3">
+          <div class="form-check mx-auto">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">Acepta los términos y condiciones</label>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-dark btn-style">Enviar</button>
+      </div>
+    </form>
+  </main>
 
-
-
-
-
-
-        
  
-<footer class="pt-5 pb-4 bg-footer">
-  <div class="container-fluid text-center">
-    <div class="row text-center">
-      <div class="footer-text pb-3">            
-        <h5>Seguinos en nuestras redes!</h5>
-      </div>
-      <div class="m-auto col-xs-12">
-        <a href="https://www.instagram.com/" class="btn btn-dark btn-style"><i class="bi bi-instagram"></i></a>
-        <a href="https://es-la.facebook.com/" class="btn btn-dark btn-style"><i class="bi bi-facebook"></i></a>
-        <a href="https://twitter.com/?lang=es" class="btn btn-dark btn-style"><i class="bi bi-twitter"></i></a>
+  <footer class="pt-5 pb-4 bg-footer">
+    <div class="container-fluid text-center">
+      <div class="row text-center">
+        <div class="footer-text pb-3">            
+          <h5>Seguinos en nuestras redes!</h5>
+        </div>
+        <div class="m-auto col-xs-12">
+          <a href="https://www.instagram.com/" class="btn btn-dark btn-style"><i class="bi bi-instagram"></i></a>
+          <a href="https://es-la.facebook.com/" class="btn btn-dark btn-style"><i class="bi bi-facebook"></i></a>
+          <a href="https://twitter.com/?lang=es" class="btn btn-dark btn-style"><i class="bi bi-twitter"></i></a>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
 
