Finalizacion de correcciones y preparado para hosting

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,9 +56,10 @@
     
 
   <main class="main-form">
+    <div class="ms-5 mt-5">
     <h1>Contacto</h1>
     <p>En caso de consultas, complete el formulario debajo para nosotros poder atenderlo!</p>
-
+    </div>
     <form action="contacto.html" enctype="application/x-www-form-urlencoded" method="post" class="col-lg-5 col-sm-12 col-xs-12 flex-form mx-auto">
       <div class="hover-form col-sm-12 col-xs-12 rounded">
         <div class="mb-3 label-w">
@@ -82,7 +83,7 @@
             <label class="form-check-label" for="flexCheckDefault">Acepta los términos y condiciones</label>
           </div>
         </div>
-        <button type="submit" class="btn btn-dark btn-style">Enviar</button>
+        <button type="submit" class="btn btn-dark btn-style btn-form-mobile">Enviar</button>
       </div>
     </form>
   </main>
