--- a/index.html
+++ b/index.html
@@ -19,52 +19,52 @@
 </head>
 
 <body class="bg-body">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-nav nav-underline p-3 sticky-top">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-nav nav-underline p-3 sticky-top">
+      <div class="container-fluid">
 
-    <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img id="nav-img" class="rounded-circle" src="images/favicon.png" alt="favicon">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <a class="navbar-brand" href="#"><img id="nav-img" class="rounded-circle" src="images/favicon.png" alt="favicon">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul  class="navbar-nav m-auto nav-text" id="navbar">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-            <ul class="dropdown-menu">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul  class="navbar-nav m-auto nav-text" id="navbar">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+              <ul class="dropdown-menu">
                 <li><a class="dropdown-item text-dark" href="pages/productos.html">Auriculares</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item text-dark" href="pages/productos.html">Teclados</a></li>
-            </ul>
-          </li>
-          <li>
-            <a class="nav-link" href="pages/contacto.html">Contacto</a>
-          </li>
-          <li>
-            <a class="nav-link" href="pages/donde-encontrarnos.html">Donde encontrarnos</a>
-          </li>
-          <li>
-            <a class="nav-link" href="pages/quienes-somos.html">Quienes somos</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-          <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
-          <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
-        </form>
+              </ul>
+            </li>
+            <li>
+              <a class="nav-link" href="pages/contacto.html">Contacto</a>
+            </li>
+            <li>
+              <a class="nav-link" href="pages/donde-encontrarnos.html">Donde encontrarnos</a>
+            </li>
+            <li>
+              <a class="nav-link" href="pages/quienes-somos.html">Quienes somos</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
+            <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
+          </form>
+        </div>
+
       </div>
 
-    </div>
-
-  </nav>
-  
+    </nav>
+  </header>
   <main>   
     <aside>
 
-      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleInterval" class="carousel slide carousel-dark" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="3000">
           <a href="pages/productos.html">
