--- a/pages/productos.html
+++ b/pages/productos.html
@@ -169,41 +169,41 @@
       </button>
     </main>
 
-    <h2 class="mt-5 ms-5 text-center title-products">Auriculares</h2>
+    <h2 class="mt-5 text-center title-products">Auriculares</h2>
 
     <article class="container-fluid pt-5 mt-5 pb-5"> 
       <div class="row m-auto gap-4 container-grid-lg-auris">
-        <div class="card p-3 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-5 card-product-height">
+        <div class="card p-3 col-lg-2 col-md-6 m-auto card-hover bg-grey grid-lg-5 card-product-height">
             <img src="../images/auriculares 1.png" class="card-img-top card-img-mobile" alt="article-img-1">
           <div class="card-body card-body-auriculares">
-              <h2 class="title-size"> Modelo G-435</h2>
+              <h2 class="title-size">G-435</h2>
               <p class="card-text placeholder-wave fw-bold">49,99$</p>
               <a href="#" class="btn btn-dark btn-size-auriculares btn-style">Comprar</a>
           </div>
         </div>
   
-        <div class="card p-3 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-6 card-product-height  ">
+        <div class="card p-3 col-lg-2 col-md-6 m-auto card-hover bg-grey grid-lg-6 card-product-height  ">
           <img src="../images/auriculares 2.png" class="card-img-top card-img-mobile" id="second-img-auriculares" alt="article-img-2">
         <div class="card-body card-body-auriculares">
-            <h2 class="title-size"> Modelo G-733</h2>
+            <h2 class="title-size">G-733</h2>
             <p class="card-text placeholder-wave fw-bold">67,00$</p>
             <a href="#" class="btn btn-dark btn-size-auriculares btn-style">Comprar</a>
         </div>
       </div>
   
-      <div class="card p-3 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-7 card-product-height ">
+      <div class="card p-3 col-lg-2 col-md-6 m-auto card-hover bg-grey grid-lg-7 card-product-height ">
         <img src="../images/auriculares 3.png" class="card-img-top  card-img-mobile" alt="article-img-3">
       <div class="card-body card-body-auriculares">
-          <h2 class="title-size"> Modelo G-335 Pro</h2>
+          <h2 class="title-size">G-335 Pro</h2>
           <p class="card-text placeholder-wave fw-bold">50,00$</p>
           <a href="#" class="btn btn-dark btn-size-auriculares btn-style">Comprar</a>
       </div>
     </div>
 
-    <div class="card p-3 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-8 card-product-height">
+    <div class="card p-3 col-lg-2 col-md-6 m-auto card-hover bg-grey grid-lg-8 card-product-height">
       <img src="../images/auriculares 4.png" class="card-img-top  card-img-mobile" alt="article-img-4">
     <div class="card-body card-body-auriculares">
-        <h2 class="title-size">Modelo G-332</h2>
+        <h2 class="title-size">G-332</h2>
         <p class="card-text placeholder-wave fw-bold">25,99$</p>
         <a href="#" class="btn btn-dark btn-size-auriculares btn-style">Comprar</a>
     </div>
@@ -211,11 +211,11 @@
   </div>
   </article>
 
-    <h3 class="mt-5 ms-5 text-center title-products">Teclados</h3>
+    <h3 class="mt-5 text-center title-products">Teclados</h3>
 
   <article class="container-fluid pt-5  mt-5 pb-5"> 
       <div class="row m-auto gap-4  container-grid-lg">
-        <div class="card p-3 col-lg-2 col-md-6 col-sm-6 col-xs-6 m-auto card-hover bg-red grid-lg-1 card-product-height">
+        <div class="card p-3 col-lg-2 col-md-6 m-auto card-hover bg-red grid-lg-1 card-product-height">
             <img src="../images/teclado 1.png" class="card-img-top  card-img-mobile" alt="article-2-img-1">
           <div class="card-body card-body-auriculares">
               <h2 class="title-size">Signature K-650</h2>
@@ -224,7 +224,7 @@
           </div>
         </div>
   
-        <div class="card p-3 col-lg-2 col-md-6 col-sm-6 col-xs-6 m-auto card-hover bg-red grid-lg-2 card-product-height">
+        <div class="card p-3 col-lg-2 col-md-6 m-auto card-hover bg-red grid-lg-2 card-product-height">
           <img src="../images/teclado 2.png" class="card-img-top  card-img-mobile" alt="article-2-img-2">
         <div class="card-body card-body-auriculares">
             <h2 class="title-size">MX Mechanical</h2>
@@ -233,7 +233,7 @@
         </div>
         </div>
   
-        <div class="card p-3 col-lg-2 col-md-6 col-sm-6 col-xs-6 m-auto card-hover bg-red grid-lg-3 card-product-height">
+        <div class="card p-3 col-lg-2 col-md-6 m-auto card-hover bg-red grid-lg-3 card-product-height">
           <img src="../images/teclado 3.png" class="card-img-top card-img-mobile" alt="article-2-img-3">
         <div class="card-body card-body-auriculares">
           <h2 class="card-title fs-5">ERGO K-860</h2>
@@ -242,7 +242,7 @@
         </div>
         </div>
 
-        <div class="card p-3 col-lg-2 col-md-6 col-sm-6 col-xs-6 m-auto card-hover bg-red grid-lg-4 card-product-height">
+        <div class="card p-3 col-lg-2 col-md-6 m-auto card-hover bg-red grid-lg-4 card-product-height">
           <img src="../images/teclado 4.png" class="card-img-top  card-img-mobile" alt="article-2-img-4">
         <div class="card-body card-body-auriculares">
           <h2 class="title-size">Teclado K-835</h2>
