--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,42 +18,42 @@
 
 <body class="bg-body">
 
-
-  <nav  class="navbar navbar-expand-lg navbar-dark bg-nav-form nav-underline p-3 sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-          <ul  class="navbar-nav mx-auto justify-content-between mb-2 mb-lg-0" id="navbar">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item text-dark" href="productos.html">Auriculares</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-dark" href="productos.html">Teclados</a></li>
-              </ul>
-            </li>
-            <li>
-              <a class="nav-link" href="#">Contacto</a>
-            </li>
-            <li>
-              <a class="nav-link" href="donde-encontrarnos.html">Donde encontrarnos</a>
-            </li>
-            <li>
-              <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
-            <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
-          </form>
-        </div>
+  <header>
+    <nav  class="navbar navbar-expand-lg navbar-dark bg-nav-form nav-underline p-3 sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul  class="navbar-nav mx-auto justify-content-between mb-2 mb-lg-0" id="navbar">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item text-dark" href="productos.html">Auriculares</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item text-dark" href="productos.html">Teclados</a></li>
+                </ul>
+              </li>
+              <li>
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+              <li>
+                <a class="nav-link" href="donde-encontrarnos.html">Donde encontrarnos</a>
+              </li>
+              <li>
+                <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+              <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
+              <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
+            </form>
+          </div>
       </div>
     </nav>
-    
+  </header> 
 
   <main class="main-form">
     <div class="ms-5 mt-5">
