--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -18,7 +18,7 @@
 
 <body class="bg-body">
 
-
+  <header>
   <nav  class="navbar navbar-expand-lg navbar-dark bg-nav-form nav-underline p-3 sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon"></a>
@@ -57,7 +57,7 @@
       </div>
     </div>
   </nav>
-     
+</header>
  
       
   <article class="container-fluid">
