--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -16,7 +16,8 @@
     <title>Quienes Somos</title>
 </head>
 <body class="bg-body">
-    <nav  class="navbar navbar-expand-lg navbar-dark bg-nav bg-nav-form nav-underline p-3 sticky-top">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-nav bg-nav-form nav-underline p-3 sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon">
           </a>
@@ -51,6 +52,8 @@
           </div>
         </div>
       </nav>
+    </header>
+    
       <main class="quienes-somos-flex">
         <img src="../images/quienesomos.jpg" alt="banner-quienes-somos" class="w-100 img-quienes-somos">
         <h1 class="text-center">Somos 3D Sound</h1>
