--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -52,8 +52,9 @@
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
           <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
-          <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
         </form>
+          <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
+        
       </div>
     </div>
   </nav>
@@ -82,7 +83,8 @@
     </div>
   </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>   
+<script type="module" src="../js/carrito.js"></script>
 </body>
 </html>
 
